# GhostClient

./: .gitattributes  .gitcommit  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: embed_file.cmake
scripts/: release.ps1
src/: FA6_Solid.h  WantedSans_Regular.h  fflags.cpp  fflags.h  gui.cpp  gui.h  icons.h  main.cpp  offsets.h  parser.cpp  parser.h  process.cpp  process.h  resource.rc
